styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}
a:link {
  text-decoration: none;
}
nav {
  z-index: 100;
}
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  color: beige;
}
nav.navbar {
  position: sticky;
  top: 0;
}
h1,
h2 {
  color: whitesmoke;
  text-shadow: 3px 3px 3px black;
}
h1 {
  font-size: 48px;
}
h2 {
  font-size: 24px;
}
section#landing {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
}

#landing {
  background-image: url(./images/bgimage.jpg);
  background-position: center;
  background-size: cover;
  min-height: 75vh;
}
.img-fluid .about-img {
  height: 300px;
  width: 300px;
}
#resume {
  min-height: 100vh;
}
ul.timeline {
  list-style-type: none;
  position: relative;
}
ul.timeline:before {
  content: " ";
  background: #d4d9df;
  display: inline-block;
  position: absolute;
  left: 29px;
  width: 2px;
  height: 100%;
  z-index: 50;
}
ul.timeline > li {
  margin: 20px 0;
  padding-left: 20px;
}
ul.timeline > li:before {
  content: " ";
  background: white;
  display: inline-block;
  position: absolute;
  border-radius: 50%;
  border: 3px solid #22c0e8;
  left: 20px;
  width: 20px;
  height: 20px;
  z-index: 50;
}
#projects {
  min-height: 100vh;
}
#testimonials {
  min-height: 100vh;
  background: linear-gradient(
    rgba(200, 213, 185, 0.7) rgba(200, 213, 185, 0.7)
  );
  background-image: url(./images/sky.jpg);
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
}
#slide-image {
  width: 200px;
  height: 300px;
  object-fit: cover;
}
#landing.container {
  box-shadow: 4px 4px 4px black;
}
#about.container {
  box-shadow: 4px 4px 4px black;
}
#resume.container {
  box-shadow: 4px 4px 4px black;
}
#projects.container {
  box-shadow: 4px 4px 4px black;
}
#testimonials.container {
  box-shadow: 4px 4px 4px black;
}
.project-images {
  width: 300px;
  height: auto;
  box-shadow: 3px 3px 3px black;
}
#contact {
  min-height: 100vh;
}
#contact.container {
  box-shadow: 4px 4px 4px black;
}
input,
textarea {
  box-shadow: 3px 3px 3px black;
}
#button-send {
  box-shadow: 2px 2px 2px black;
}

